# template-python

./: .flake8  .gitignore  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml
{{cookiecutter.project_name}}/: pyproject.toml
